SERVER-76231 Relax validate early failure when detecting out-of-order entries (#25165)

GitOrigin-RevId: 6a91436faa0539bfa003a92fc098d97846346822